--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,3 +1,6 @@
 {
-  "extends": ["@bernankez", "@bernankez/unocss"]
+  "extends": ["@bernankez", "@bernankez/unocss"],
+  "ignorePatterns": [
+    "*.svg"
+  ]
 }
