--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "@bernankez/prototype",
   "type": "module",
   "version": "0.0.4",
-  "packageManager": "pnpm@8.15.1",
+  "packageManager": "pnpm@9.1.3",
   "description": "Prototypes",
   "author": {
     "name": "Cole",
@@ -20,13 +20,13 @@
   "sideEffects": false,
   "exports": {
     ".": {
-      "require": "./dist/index.js",
-      "import": "./dist/index.mjs"
+      "import": "./dist/index.mjs",
+      "require": "./dist/index.js"
     },
     "./components": {
       "types": "./dist/components/index.d.ts",
-      "require": "./dist/components/index.js",
-      "import": "./dist/components/index.mjs"
+      "import": "./dist/components/index.mjs",
+      "require": "./dist/components/index.js"
     }
   },
   "main": "./dist/index.js",
@@ -63,38 +63,38 @@
     "vue": ">=3.3.0"
   },
   "dependencies": {
-    "@vueuse/core": "^10.7.2",
-    "markdown-it": "^14.0.0",
+    "@vueuse/core": "^10.10.0",
+    "markdown-it": "^14.1.0",
     "markdown-it-katex": "^2.0.3",
-    "vue-router": "^4.2.5"
+    "vue-router": "^4.3.2"
   },
   "devDependencies": {
-    "@bernankez/eslint-config": "^0.7.4",
+    "@bernankez/eslint-config": "^1.4.0",
     "@bernankez/eslint-config-unocss": "^0.7.4",
-    "@bernankez/stylelint-config": "^0.4.4",
-    "@iconify-json/lucide": "^1.1.160",
+    "@iconify-json/lucide": "^1.1.188",
     "@shikijs/markdown-it": "1.0.0-beta.1",
     "@shikijs/twoslash": "1.0.0-beta.1",
-    "@types/markdown-it": "^13.0.7",
-    "@types/node": "^20.11.10",
-    "@unocss/reset": "^0.58.4",
-    "@vitejs/plugin-vue": "^5.0.3",
+    "@types/markdown-it": "^13.0.8",
+    "@types/node": "^20.12.12",
+    "@unocss/eslint-plugin": "^0.60.3",
+    "@unocss/reset": "^0.60.3",
+    "@vitejs/plugin-vue": "^5.0.4",
     "@vue/tsconfig": "^0.5.1",
-    "bumpp": "^9.3.0",
-    "eslint": "^8.56.0",
-    "happy-dom": "^13.3.5",
-    "lint-staged": "^15.2.0",
+    "bumpp": "^9.4.1",
+    "eslint": "^9.3.0",
+    "eslint-plugin-format": "^0.1.1",
+    "happy-dom": "^14.11.1",
+    "lint-staged": "^15.2.5",
     "shiki": "1.0.0-beta.1",
-    "simple-git-hooks": "^2.9.0",
-    "stylelint": "^15.11.0",
-    "typescript": "^5.3.3",
+    "simple-git-hooks": "^2.11.1",
+    "typescript": "^5.4.5",
     "unbuild": "^2.0.0",
-    "unocss": "^0.58.4",
-    "vite": "^5.0.12",
-    "vite-plugin-vue-devtools": "^7.0.13",
-    "vitest": "^1.2.2",
-    "vue": "^3.4.15",
-    "vue-tsc": "^1.8.27"
+    "unocss": "^0.60.3",
+    "vite": "^5.2.11",
+    "vite-plugin-vue-devtools": "^7.2.1",
+    "vitest": "^1.6.0",
+    "vue": "^3.4.27",
+    "vue-tsc": "^2.0.19"
   },
   "simple-git-hooks": {
     "pre-commit": "pnpm lint-staged"
