--- a/package.json
+++ b/package.json
@@ -72,8 +72,8 @@
     "@bernankez/eslint-config": "^1.4.0",
     "@bernankez/eslint-config-unocss": "^0.7.4",
     "@iconify-json/lucide": "^1.1.188",
-    "@shikijs/markdown-it": "1.0.0-beta.1",
-    "@shikijs/twoslash": "1.0.0-beta.1",
+    "@shikijs/markdown-it": "^1.6.0",
+    "@shikijs/twoslash": "^1.6.0",
     "@types/markdown-it": "^13.0.8",
     "@types/node": "^20.12.12",
     "@unocss/eslint-plugin": "^0.60.3",
@@ -85,7 +85,7 @@
     "eslint-plugin-format": "^0.1.1",
     "happy-dom": "^14.11.1",
     "lint-staged": "^15.2.5",
-    "shiki": "1.0.0-beta.1",
+    "shiki": "^1.6.0",
     "simple-git-hooks": "^2.11.1",
     "typescript": "^5.4.5",
     "unbuild": "^2.0.0",
